workloads/sockshop/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sockshop
  labels:
    app.kubernetes.io/name: sockshop
    adaptive-controller/workload: sockshop
